<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/actionBarSize"
    android:background="@color/purple_dark"
    android:contentDescription="@string/kategori_ruangan_appbar_page">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_back_ruangan_code"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:padding="10dp"
        android:src="@drawable/baseline_arrow_back_24"
        android:tint="@color/white_01"
        android:contentDescription="@string/kembali"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kategori_ruangan_appbar"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/white_01"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_back_ruangan_code"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>