<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black_01"
    tools:context=".ui.kode_pribadi.PersonalCodeListActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_codes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_blank_img"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/kodeqr_nodata"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/rv_codes"
        app:layout_constraintStart_toStartOf="@+id/rv_codes"
        app:layout_constraintTop_toTopOf="@+id/rv_codes" />

    <TextView
        android:id="@+id/tv_blank_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/belum_ada_kode_qr_yang_dibuat"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/iv_blank_img"
        app:layout_constraintStart_toStartOf="@+id/iv_blank_img"
        app:layout_constraintTop_toBottomOf="@+id/iv_blank_img"
        android:visibility="invisible"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@drawable/ly_button"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        android:paddingHorizontal="18dp"
        android:paddingTop="16dp"
        android:paddingBottom="34dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/btn_create_code_list"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="6dp"
            android:layout_weight="0"
            android:background="@color/black_02"
            android:contentDescription="@string/buat"
            app:srcCompat="@drawable/buat" />

        <ImageButton
            android:id="@+id/btn_back_code_list"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="6dp"
            android:layout_weight="0"
            android:background="@color/black_02"
            android:contentDescription="@string/kembali"
            app:srcCompat="@drawable/kembali" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>