<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_01"
    tools:context=".ui.kode_naviku.NavikuCodeListActivity">

    <include
        android:id="@+id/ab_naviku_code_list"
        layout="@layout/naviku_code_list_appbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ib_ruangan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/zxing_transparent"
        android:src="@drawable/ruangan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ab_naviku_code_list" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/zxing_transparent"
        android:src="@drawable/bangunan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ib_ruangan" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/zxing_transparent"
        android:src="@drawable/benda"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/zxing_transparent"
        android:src="@drawable/rambu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton3" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/zxing_transparent"
        android:src="@drawable/angka"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton4" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@drawable/ly_button"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        android:paddingHorizontal="18dp"
        android:paddingTop="16dp"
        android:paddingBottom="34dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/btn_download_naviku_code"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="6dp"
            android:layout_weight="0"
            android:background="@color/black_02"
            android:contentDescription="@string/unduh"
            app:srcCompat="@drawable/unduh" />

        <ImageButton
            android:id="@+id/btn_share_naviku_code"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="6dp"
            android:layout_weight="0"
            android:background="@color/black_02"
            android:contentDescription="@string/kirim"
            app:srcCompat="@drawable/kirim" />

        <ImageButton
            android:id="@+id/btn_back_naviku_code"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="6dp"
            android:layout_weight="0"
            android:background="@color/black_02"
            android:contentDescription="@string/kembali"
            app:srcCompat="@drawable/kembali" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>